--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,13 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+
+}
+
+*::selection {
+  color: #FBB124;
+  background: #000;
 }
 
 code {
